external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/conflict_warn_deny_same_code.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10008]: ambiguous attribute value
  ┌─ tests/move_check/warning_suppression/conflict_warn_deny_same_code.move:4:12
  │
4 │     #[warn(unused_variable)]
  │            ^^^^^^^^^^^^^^^ Conflicting filter for 'unused_variable' specified in the same attribute
5 │     #[deny(unused_variable)]
  │            --------------- Conflicting filter for 'unused_variable' specified here

error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/conflict_warn_deny_same_code.move:7:13
  │
5 │     #[deny(unused_variable)]
  │            --------------- the lint level is defined here
6 │     fun foo() {
7 │         let x = 0u64;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
